Bug 1906146 - Part 6: Align the gear icon to the right to avoid shift on expand/collapse

--- a/static/css/mozsearch.css
+++ b/static/css/mozsearch.css
@@ -673,6 +673,7 @@ tr.after-context-line + tr.before-context-line {
   cursor: pointer;
 }
 #show-settings {
+  float: right;
   color: var(--panel-header-color);
 }
 .navpanel-icon {
